# pyre2

./: .buildinfo  .flake8  CHANGELOG.html  README.html  genindex.html  index.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: conda-dev.yml  main.yml  release.yml  secret-scan.yml  sonarqube.yml  sphinx.yml
_modules/: index.html
_sources/: README.rst.txt
_static/: documentation_options.js
api/: modules.html  re2.html
conda.recipe/: meta.yaml
src/: compile.pxi  pattern.pxi  re2.pyx
tests/: test_fallback.txt  test_nulls.txt
